[gd_scene load_steps=10 format=3 uid="uid://lw7jbt8vkjps"]

[ext_resource type="Texture2D" uid="uid://cdroaxlxfndj" path="res://assets/sprites/door/出口.png" id="1_ackpf"]
[ext_resource type="Script" path="res://scripts/door.gd" id="1_umujl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ea1kh"]
atlas = ExtResource("1_ackpf")
region = Rect2(45, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx8jx"]
atlas = ExtResource("1_ackpf")
region = Rect2(45, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ubt"]
atlas = ExtResource("1_ackpf")
region = Rect2(30, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_bygkv"]
atlas = ExtResource("1_ackpf")
region = Rect2(15, 0, 15, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_keoug"]
atlas = ExtResource("1_ackpf")
region = Rect2(0, 0, 15, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4rpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea1kh")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx8jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ubt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bygkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keoug")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fudoe"]
size = Vector2(8, 10)

[node name="Door" type="Area2D" groups=["boom_not_hurt"]]
collision_mask = 2
script = ExtResource("1_umujl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.25, 0)
scale = Vector2(1.03333, 1)
sprite_frames = SubResource("SpriteFrames_j4rpr")
animation = &"open"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_fudoe")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
